pulizia nelle cartelle values, unite stringhe, fatta traduzione per le stringhe e cercato di rimuovere hard code disattivata immagine emptyview per le disponibilità

--- a/app/src/main/res/layout/activity_choose_photo.xml
+++ b/app/src/main/res/layout/activity_choose_photo.xml
@@ -62,7 +62,7 @@
             android:layout_marginTop="16dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Short description"/>
+            android:text="@string/short_description"/>
         <EditText
             android:id="@+id/descriptionET"
             android:layout_width="match_parent"
