--- a/app/src/main/res/layout-v21/riga_lista.xml
+++ b/app/src/main/res/layout-v21/riga_lista.xml
@@ -6,9 +6,8 @@
     android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardUseCompatPadding="true"
-    android:layout_margin="3dp"
-    app:cardPreventCornerOverlap="false"
+    android:layout_marginTop="3dp"
+    android:layout_marginBottom="3dp"
     card_view:cardBackgroundColor="@android:color/white"
     card_view:cardCornerRadius="5dp"
     android:clickable="true">
