--- a/app/src/main/res/layout/activity_add_review.xml
+++ b/app/src/main/res/layout/activity_add_review.xml
@@ -160,7 +160,7 @@
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Add review"
+                android:text="@string/add_review"
                 android:id="@+id/add"
                 style="@style/Base.Widget.AppCompat.Button.Colored"
                 android:layout_gravity="center_horizontal" />
