--- a/app/src/main/res/layout/activity_show_offer.xml
+++ b/app/src/main/res/layout/activity_show_offer.xml
@@ -60,7 +60,7 @@
                     android:gravity="center_vertical|center_horizontal"
                     android:textColor="@android:color/holo_green_dark"
                     android:background="@drawable/green_gradiente_inverted"
-                    android:text="Today available!"
+                    android:text="@string/today_available"
                     />
                 <TextView
                     android:layout_width="match_parent"
