--- a/app/src/main/res/layout/offer_prev_fragment_layout.xml
+++ b/app/src/main/res/layout/offer_prev_fragment_layout.xml
@@ -20,7 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/offerPrevTitle"
-            android:text="Offers"/>
+            android:text="@string/offers"/>
     </LinearLayout>
 
     <android.support.v4.view.ViewPager
