--- a/app/src/main/res/layout/reviews_prev_fragment_layout.xml
+++ b/app/src/main/res/layout/reviews_prev_fragment_layout.xml
@@ -42,5 +42,5 @@
         android:background="?attr/selectableItemBackground"
         android:clickable="true"
         android:id="@+id/showAllReviewsButton"
-        android:text="SHOW ALL" />
+        android:text="@string/show_all" />
 </LinearLayout>
