--- a/app/src/main/res/layout/nav_header_client.xml
+++ b/app/src/main/res/layout/nav_header_client.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="@drawable/side_nav_bar"
-    android:gravity="bottom"
+    android:background="@drawable/side_nav_bar_client"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -17,19 +16,16 @@
          android:layout_height="wrap_content"
          android:paddingTop="@dimen/nav_header_vertical_spacing"
          android:src="@drawable/ic_account_circle_black_48dp" />
-
-     <TextView
+    <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingTop="@dimen/nav_header_vertical_spacing"
          android:id="@+id/nav_drawer_name"
-         android:text="Nome Ristorante"
+         android:text="@string/eseguireLogin"
          android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
-
-     <TextView
-         android:id="@+id/nav_drawer_email"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:text="email ristorante" />
+    <TextView
+        android:id="@+id/nav_drawer_email"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
