--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android" >
+    android:focusable="true"
+    android:focusableInTouchMode="true"
 
-    <include android:id="@+id/toolbar_layout"
-        layout="@layout/toolbar_view"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"/>
+    tools:context="it.polito.mad_lab4.login_registrazione.Register">
 
+    <include layout="@layout/toolbar_view" android:layout_height="wrap_content" android:layout_width="match_parent"></include>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -22,15 +24,6 @@
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
             android:orientation="vertical">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:id="@+id/login_failed_message"
-                android:layout_height="wrap_content"
-                android:textColor="@color/bad"
-                android:layout_gravity="center_horizontal"
-                android:text="@string/login_failed"
-                android:visibility="gone"/>
 
             <android.support.v7.widget.CardView
                 xmlns:card_view="http://schemas.android.com/apk/res-auto"
@@ -65,10 +58,10 @@
                         <EditText
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:id="@+id/usernameET"
+                            android:id="@+id/nameNA_client"
                             android:textColor="@android:color/black"
                             android:background="@android:color/transparent"
-                            android:hint="@string/email_registrazione"
+                            android:hint="@string/nome_registrazione"
                             android:padding="5dp"
                             android:singleLine="false" />
                     </LinearLayout>
@@ -90,6 +83,38 @@
                         <ImageView
                             android:layout_width="48dp"
                             android:layout_height="48dp"
+                            android:src="@drawable/ic_email_profile_grey"
+                            android:cropToPadding="false"
+                            android:padding="2dp" />
+
+                        <EditText
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/emailNA_client"
+                            android:textColor="@android:color/black"
+                            android:background="@android:color/transparent"
+                            android:hint="@string/email_registrazione"
+                            android:padding="5dp"
+                            android:inputType="textEmailAddress" />
+                    </LinearLayout>
+
+                    <View
+                        android:layout_width="fill_parent"
+                        android:layout_height="1dip"
+                        android:background="#20000000"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginBottom="5dp" />
+
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:id="@+id/pwdlLL"
+                        android:longClickable="true">
+                        <ImageView
+                            android:layout_width="48dp"
+                            android:layout_height="48dp"
                             android:src="@drawable/ic_password_grey"
                             android:cropToPadding="false"
                             android:padding="2dp" />
@@ -97,13 +122,45 @@
                         <EditText
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:id="@+id/passwordET"
+                            android:id="@+id/passwordNA_client"
                             android:textColor="@android:color/black"
                             android:background="@android:color/transparent"
                             android:hint="@string/password"
                             android:padding="5dp"
                             android:inputType="textPassword" />
-                        </LinearLayout>
+                    </LinearLayout>
+
+                    <View
+                        android:layout_width="fill_parent"
+                        android:layout_height="1dip"
+                        android:background="#20000000"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginBottom="5dp" />
+
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:id="@+id/pwd_repeatLL"
+                        android:longClickable="true">
+                        <ImageView
+                            android:layout_width="48dp"
+                            android:layout_height="48dp"
+                            android:src="@drawable/ic_password_grey"
+                            android:cropToPadding="false"
+                            android:padding="2dp" />
+
+                        <EditText
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/passwordNA_client_repeat"
+                            android:textColor="@android:color/black"
+                            android:background="@android:color/transparent"
+                            android:hint="@string/password_ripeat"
+                            android:padding="5dp"
+                            android:inputType="textPassword" />
+                    </LinearLayout>
                 </LinearLayout>
             </android.support.v7.widget.CardView>
 
@@ -117,12 +174,12 @@
                 android:clickable="true"
                 android:layout_gravity="center_horizontal"
                 android:layout_height="wrap_content"
-                android:onClick="eseguiLogin">
+                android:onClick="nuovaRegistrazioneClient">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="LOGIN"
+                    android:text="REGISTER"
                     android:layout_gravity="center"
                     android:textSize="25sp"
                     android:textStyle="italic"
@@ -131,12 +188,8 @@
                     />
             </android.support.v7.widget.CardView>
 
-            <TextView
-            android:layout_marginTop="16dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="(Username rappresenta la propria mail di registrazione)\nUsername: group9madlab4@gmail.com\nPassword: madlab"/>
-
         </LinearLayout>
+
     </ScrollView>
+
 </LinearLayout>
