--- a/app/src/main/res-manager/layout/nav_header_restaurant.xml
+++ b/app/src/main/res-manager/layout/nav_header_restaurant.xml
@@ -10,6 +10,12 @@
     android:paddingTop="@dimen/activity_vertical_margin">
     <!-- android:theme="@style/ThemeOverlay.AppCompat.Dark">
 -->
+
+    <!-- PER ORA NON VIENE MAI USATO (USIAMO SOLO L'HEADER CLIENT),
+        PERCHE' SONO IDENTICI: LOGO - NOME - EMAIL.
+        SE SI VOGLIONO DIFFERENZIARE BISOGNA FARLO NEI VARI LAYOUT
+        E NELLA BASE ACTIVITY QUANDO ANDIAMO A RIEMPIRLI
+      -->
    <ImageView
          android:id="@+id/nav_drawer_logo"
          android:layout_width="wrap_content"
