--- a/app/src/main/res/layout/activity_show_offer.xml
+++ b/app/src/main/res/layout/activity_show_offer.xml
@@ -29,7 +29,7 @@
                 <fragment
                     xmlns:custom="http://schemas.android.com/apk/res/it.polito.mad_lab4"
                     android:id="@+id/photoViewer"
-                    android:name="it.polito.mad_lab4.common.photo_viewer.PhotoViewer"
+                    android:name="it.polito.mad_lab4.manager.photo_viewer.PhotoViewer"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     custom:isEditable="false"
