--- a/app/src/main/res-manager/layout/fragment_time_range_selecter.xml
+++ b/app/src/main/res-manager/layout/fragment_time_range_selecter.xml
@@ -4,116 +4,294 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="it.polito.mad_lab2.EditRestaurantProfile">
-
-    <LinearLayout
+    tools:context="it.polito.mad_lab4.manager.EditRestaurantProfile">
+    <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <Button
-            android:id="@+id/monday_butt"
-            android:layout_width="match_parent"
+        android:stretchColumns="1">
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1dip"
+            android:background="#20000000"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp" />
+        <TableRow
+            android:gravity="center"
+            android:clickable="true"
+            android:id="@+id/mon_row">
+            <TextView
+                android:layout_column="1"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="@string/mon"/>
+
+            <LinearLayout
+                android:layout_column="2"
+                android:layout_gravity="end"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="11:30 - 15:30"
+                    android:id="@+id/monday"
+                    />
+                <ImageView
+                    android:layout_width="36dp"
+                    android:layout_height="36dp"
+                    android:layout_margin="5dp"
+                    android:background="@drawable/ic_edit_holo"
+                    />
+
+            </LinearLayout>
+
+        </TableRow>
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1dip"
+            android:background="#20000000"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp" />
+        <TableRow
+            android:gravity="center"
+            android:clickable="true"
+            android:id="@+id/tue_row">
+            <TextView
+                android:layout_column="1"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="@string/tue" />
+            <LinearLayout
+                android:layout_column="2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_gravity="end"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="11:30 - 15:30"
+                    android:id="@+id/tuesday"
+                     />
+                <ImageView
+                    android:layout_width="36dp"
+                    android:layout_height="36dp"
+                    android:layout_margin="5dp"
+                    android:background="@drawable/ic_edit_holo"
+                    />
+
+
+            </LinearLayout>
+
+        </TableRow>
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1dip"
+            android:background="#20000000"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp" />
+
+        <TableRow
+            android:gravity="center"
+            android:clickable="true"
+            android:id="@+id/wed_row">
+            <TextView
+                android:layout_column="1"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="@string/wed" />
+            <LinearLayout
+                android:layout_column="2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_gravity="end"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="11:30 - 15:30"
+                    android:id="@+id/wedenesday"
+                    />
+                <ImageView
+                    android:layout_width="36dp"
+                    android:layout_height="36dp"
+                    android:layout_margin="5dp"
+                    android:background="@drawable/ic_edit_holo"
+                    />
+
+
+            </LinearLayout>
+
+        </TableRow>
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1dip"
+            android:background="#20000000"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp" />        <TableRow
+        android:gravity="center"
+        android:clickable="true"
+        android:id="@+id/thu_row">
+        <TextView
+            android:layout_column="1"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/thu" />
+        <LinearLayout
+            android:layout_column="2"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/monday"
-            android:drawablePadding="10dp"
-            android:drawableRight="@drawable/ic_mode_edit_white_48dp"
-            android:padding="10dp"/>
+            android:gravity="center"
 
-    </LinearLayout>
+            android:layout_gravity="end"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="11:30 - 15:30"
+                android:id="@+id/thursday"
+                />
+            <ImageView
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:layout_margin="5dp"
+                android:background="@drawable/ic_edit_holo"
+                />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/tuesday_butt"
-            android:layout_width="match_parent"
+        </LinearLayout>
+
+    </TableRow>
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1dip"
+            android:background="#20000000"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp" />
+        <TableRow
+        android:gravity="center"
+        android:clickable="true"
+        android:id="@+id/fri_row">
+        <TextView
+            android:layout_column="1"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/fri" />
+        <LinearLayout
+            android:layout_column="2"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/tuesday"
-            android:drawablePadding="10dp"
-            android:drawableRight="@drawable/ic_mode_edit_white_48dp"
-            android:padding="10dp"/>
+            android:gravity="center"
 
-    </LinearLayout>
+            android:layout_gravity="end"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="11:30 - 15:30"
+                android:id="@+id/friday"
+                />
+            <ImageView
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:layout_margin="5dp"
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+                android:background="@drawable/ic_edit_holo"
+                />
 
-        <Button
-            android:id="@+id/wednesday_butt"
-            android:layout_width="match_parent"
+
+        </LinearLayout>
+
+    </TableRow>
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1dip"
+            android:background="#20000000"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp" />
+        <TableRow
+        android:gravity="center"
+        android:clickable="true"
+        android:id="@+id/sat_row">
+        <TextView
+            android:layout_column="1"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/sat" />
+        <LinearLayout
+            android:layout_column="2"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:drawablePadding="10dp"
-            android:drawableRight="@drawable/ic_mode_edit_white_48dp"
-            android:padding="10dp"/>
+            android:gravity="center"
 
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+            android:layout_gravity="end"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="11:30 - 15:30"
+                android:id="@+id/saturday"
+                />
+            <ImageView
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:layout_margin="5dp"
+                android:background="@drawable/ic_edit_holo"
+                />
 
-        <Button
-            android:id="@+id/thursday_butt"
-            android:layout_width="match_parent"
+
+        </LinearLayout>
+
+    </TableRow>
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1dip"
+            android:background="#20000000"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp" />
+        <TableRow
+        android:gravity="center"
+        android:clickable="true"
+        android:id="@+id/sun_row">
+        <TextView
+            android:layout_column="1"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/sun" />
+        <LinearLayout
+            android:layout_column="2"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:drawablePadding="10dp"
-            android:drawableRight="@drawable/ic_mode_edit_white_48dp"
-            android:padding="10dp"/>
+            android:layout_gravity="end"
+            android:gravity="center"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="11:30 - 15:30"
+                android:id="@+id/sunday"
+                />
+            <ImageView
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:layout_margin="5dp"
+                android:background="@drawable/ic_edit_holo"
+                />
 
-    </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        </LinearLayout>
 
-        <Button
-            android:id="@+id/friday_butt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            android:drawablePadding="10dp"
-            android:drawableRight="@drawable/ic_mode_edit_white_48dp"
-            android:padding="10dp"/>
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/saturday_butt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/saturday"
-            android:drawablePadding="10dp"
-            android:drawableRight="@drawable/ic_mode_edit_white_48dp"
-            android:padding="10dp"/>
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/sunday_butt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/sunday"
-            android:drawablePadding="10dp"
-            android:drawableRight="@drawable/ic_mode_edit_white_48dp"
-            android:padding="10dp"/>
-
-    </LinearLayout>
+    </TableRow>
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1dip"
+            android:background="#20000000"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp" />
+    </TableLayout>
 
 </LinearLayout>
