--- a/app/src/main/res-manager/layout/timerange_picker.xml
+++ b/app/src/main/res-manager/layout/timerange_picker.xml
@@ -3,7 +3,15 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
-
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textStyle="bold"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_margin="10dp"
+        android:id="@+id/header"
+        android:text="Monday"/>
 
     <TabHost
 
