--- a/app/src/main/res/drawable/rectangle_editext.xml
+++ b/app/src/main/res/drawable/rectangle_editext.xml
@@ -2,7 +2,8 @@
 <!--  res/drawable/rounded_edittext.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
-    <solid android:color="@color/colorAccent"/>
+    <solid android:color="@color/transparent"></solid>
+    <stroke android:color="@color/colorAccent" android:width="1dp"/>
     <corners android:radius="-50dp" android:topRightRadius="5dp" android:bottomRightRadius="-5dp"></corners>
 
 </shape>
