--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -144,6 +144,12 @@
                         android:layout_height="wrap_content"
                         android:text="Add Review" />
                        -->
+                    <fragment
+                        android:id="@+id/map"
+                        android:name="com.google.android.gms.maps.SupportMapFragment"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        tools:context="it.polito.mad_lab4.MainActivity" />
 
                 </LinearLayout>
             </ScrollView>
