--- a/app/src/main/res-manager/layout/activity_edit_restaurant_profile.xml
+++ b/app/src/main/res-manager/layout/activity_edit_restaurant_profile.xml
@@ -288,12 +288,78 @@
                     android:padding="5dp"
                     android:inputType="textMultiLine" />
             </LinearLayout>
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="1dip"
+                android:background="#20000000"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp" />
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/typeLL"
+                android:longClickable="true">
+
+                <ImageView
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:src="@drawable/ic_restaurant_holo_light"
+                    android:cropToPadding="false"
+                    android:padding="2dp" />
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:id="@+id/edit_cuisine"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
+                    android:clickable="true"
+                    android:textColor="@android:color/black"
+                    android:background="@android:color/transparent"
+                    android:hint="@string/cuisine"
+                    android:padding="5dp"
+                    android:inputType="textMultiLine" />
+            </LinearLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:textStyle="bold"
+                android:layout_marginTop="10dp"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="@string/enabled_reservations"
+                android:id="@+id/enabled_reservations"
+
+                />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center">
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/takeAway"
+                    android:id="@+id/takeaway"
+                    android:layout_margin="5dp"/>
+
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/eat_in"
+                    android:layout_margin="5dp"
+                    android:id="@+id/onPlace" />
+
+            </LinearLayout>
+
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="@string/opening_time"
+                android:textStyle="bold"
                 android:id="@+id/opening_time"
                 android:paddingTop="20dp"
                 />
@@ -312,6 +378,7 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="@string/features"
+                android:textStyle="bold"
                 android:id="@+id/feature_header"
                 android:paddingTop="20dp"
                 />
