--- a/app/src/main/res/layout/activity_register_restaurant.xml
+++ b/app/src/main/res/layout/activity_register_restaurant.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android" >
+    android:focusable="true"
+    android:focusableInTouchMode="true"
 
-    <include android:id="@+id/toolbar_layout"
-        layout="@layout/toolbar_view"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"/>
+    tools:context="it.polito.mad_lab4.login_registrazione.Register_restaurant">
 
+    <include layout="@layout/toolbar_view" android:layout_height="wrap_content" android:layout_width="match_parent"></include>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -22,15 +24,6 @@
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
             android:orientation="vertical">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:id="@+id/login_failed_message"
-                android:layout_height="wrap_content"
-                android:textColor="@color/bad"
-                android:layout_gravity="center_horizontal"
-                android:text="@string/login_failed"
-                android:visibility="gone"/>
 
             <android.support.v7.widget.CardView
                 xmlns:card_view="http://schemas.android.com/apk/res-auto"
@@ -53,7 +46,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center"
-                        android:id="@+id/usernameLL">
+                        android:id="@+id/managerNameLL">
 
                         <ImageView
                             android:layout_width="48dp"
@@ -65,10 +58,42 @@
                         <EditText
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:id="@+id/usernameET"
+                            android:id="@+id/nameNA_manager"
                             android:textColor="@android:color/black"
                             android:background="@android:color/transparent"
-                            android:hint="@string/email_registrazione"
+                            android:hint="@string/nome_registrazione"
+                            android:padding="5dp"
+                            android:singleLine="false" />
+                    </LinearLayout>
+
+                    <View
+                        android:layout_width="fill_parent"
+                        android:layout_height="1dip"
+                        android:background="#20000000"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginBottom="5dp" />
+
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:id="@+id/restaurantNameLL"
+                        android:longClickable="true">
+                        <ImageView
+                            android:layout_width="48dp"
+                            android:layout_height="48dp"
+                            android:src="@drawable/ic_restaurant_grey"
+                            android:cropToPadding="false"
+                            android:padding="2dp" />
+
+                        <EditText
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/restaurantName_manager"
+                            android:textColor="@android:color/black"
+                            android:background="@android:color/transparent"
+                            android:hint="@string/nome_ristorante_registrazione"
                             android:padding="5dp" />
                     </LinearLayout>
 
@@ -84,25 +109,26 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center"
-                        android:id="@+id/emailLL"
+                        android:id="@+id/managerEmailLL"
                         android:longClickable="true">
                         <ImageView
                             android:layout_width="48dp"
                             android:layout_height="48dp"
-                            android:src="@drawable/ic_password_grey"
+                            android:src="@drawable/ic_email_profile_grey"
                             android:cropToPadding="false"
                             android:padding="2dp" />
 
                         <EditText
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:id="@+id/passwordET"
+                            android:id="@+id/emailNA_manager"
                             android:textColor="@android:color/black"
                             android:background="@android:color/transparent"
-                            android:hint="@string/password"
+                            android:hint="@string/email_registrazione"
                             android:padding="5dp"
-                            android:inputType="textPassword" />
-                        </LinearLayout>
+                            android:inputType="textEmailAddress" />
+                    </LinearLayout>
+
                 </LinearLayout>
             </android.support.v7.widget.CardView>
 
@@ -116,12 +142,12 @@
                 android:clickable="true"
                 android:layout_gravity="center_horizontal"
                 android:layout_height="wrap_content"
-                android:onClick="eseguiLogin">
+                android:onClick="sendRequest">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="LOGIN"
+                    android:text="SEND REQUEST"
                     android:layout_gravity="center"
                     android:textSize="25sp"
                     android:textStyle="italic"
@@ -130,12 +156,8 @@
                     />
             </android.support.v7.widget.CardView>
 
-            <TextView
-            android:layout_marginTop="16dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="(Username rappresenta la propria mail di registrazione)\nUsername: group9madlab4@gmail.com\nPassword: madlab"/>
-
         </LinearLayout>
+
     </ScrollView>
+
 </LinearLayout>
