--- a/app/src/main/res/layout/favourites_list_item.xml
+++ b/app/src/main/res/layout/favourites_list_item.xml
@@ -1,8 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
     <android.support.v7.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -15,6 +11,7 @@
         android:layout_height="wrap_content">
         <LinearLayout
             android:padding="8dp"
+            android:gravity="center_vertical"
             android:layout_width="match_parent"
             android:orientation="horizontal"
             android:layout_height="wrap_content">
@@ -28,14 +25,14 @@
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:paddingLeft="5dp">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Alma latina"
+                    android:text="Alma latina,dfmnsdklfsdklfjsdklfmsdklfklsdfjsdklfjsdkljfsdòl fsd"
                     android:id="@+id/name"
                     android:textColor="@color/primary_dark_material_dark" />
 
@@ -43,7 +40,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:text="Via Germanasca 32, Torino"
+                    android:text="Via Germanasca 32, Torinofk,sdjfklsdjlòfsdlkflkdsj"
                     android:id="@+id/address" />
 
                 <LinearLayout
@@ -75,4 +72,3 @@
             </LinearLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
-</RelativeLayout>
