--- a/app/src/main/res/layout/menu_list_detail.xml
+++ b/app/src/main/res/layout/menu_list_detail.xml
@@ -19,6 +19,10 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <ImageView
@@ -70,8 +74,40 @@
                 android:layout_marginRight="8dp"
                 android:textSize="18sp"
                 android:layout_gravity="center_vertical"/>
+
+        </LinearLayout>
+        <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="11sp"
+        android:id="@+id/today_not_available"
+        android:height="15dp"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textStyle="bold"
+        android:gravity="center_vertical|center_horizontal"
+        android:textColor="@android:color/holo_red_dark"
+        android:background="@drawable/red_gradient"
+        android:text="@string/today_not_available"                    />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="11sp"
+            android:visibility="gone"
+            android:id="@+id/today_available"
+            android:height="15dp"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textStyle="bold"
+            android:gravity="center_vertical|center_horizontal"
+            android:textColor="@android:color/holo_green_dark"
+            android:background="@drawable/green_gradient"
+
+            />
         </LinearLayout>
     </android.support.v7.widget.CardView>
+
+
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="3dp"></RelativeLayout>
