--- a/app/src/main/res/layout/reservation_details_dialog.xml
+++ b/app/src/main/res/layout/reservation_details_dialog.xml
@@ -2,13 +2,28 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:id="@+id/imageView"
+            android:background="@color/themeColor"
+            android:adjustViewBounds="true" />
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:id="@+id/imageView"
-        android:background="@color/themeColor"
-        android:adjustViewBounds="true" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/info"
+            android:textAllCaps="true"
+            android:id="@+id/textView3"
+            android:textStyle="bold"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true" />
+
+    </RelativeLayout>
 
     <LinearLayout
         android:orientation="horizontal"
