--- a/app/src/main/res/layout/your_order_row.xml
+++ b/app/src/main/res/layout/your_order_row.xml
@@ -1,43 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:gravity="center"
-    android:layout_height="match_parent">
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+    android:layout_height="match_parent"
+    >
+
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
             android:id="@+id/food_name"
-            android:text="Pollo"
-            android:layout_marginRight="30dp"
+            android:layout_toLeftOf="@+id/ll"
+            android:text="sdfsdfsfsssssssssssssssssssssssssssssssssssssssssssssssfs"
+            android:layout_marginRight="5dp"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textStyle="bold"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/food_quantity"
-            android:gravity="left"
-            android:text="2 x "
-            android:layout_marginRight="10dp"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            />
-
-    </LinearLayout>
-
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:gravity="end"
+        android:id="@+id/ll"
+        android:orientation="horizontal">
 
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:id="@+id/food_quantity"
+        android:text="2 x "
+        android:layout_marginRight="10dp"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/food_price"
         android:text="3,5 €"
         android:textAppearance="?android:attr/textAppearanceMedium"
         />
+    </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
