--- a/app/src/main/res/layout/list_order_fragment.xml
+++ b/app/src/main/res/layout/list_order_fragment.xml
@@ -8,6 +8,8 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/listView" />
+        android:id="@+id/listView"
+        android:paddingBottom="58dp"
+        android:scrollbars="none"/>
 
 </LinearLayout>
