--- a/app/src/main/res/layout/rate_dishes.xml
+++ b/app/src/main/res/layout/rate_dishes.xml
@@ -9,6 +9,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/listView"
+        android:paddingBottom="58dp"
+        android:scrollbars="none"
+        android:clipToPadding="false"
         android:layout_gravity="center_horizontal" />
 
 </LinearLayout>
