--- a/app/src/main/res/layout/activity_main_infowindow_map.xml
+++ b/app/src/main/res/layout/activity_main_infowindow_map.xml
@@ -1,37 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+
+
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    android:layout_marginBottom="10dp"
+    android:layout_marginTop="10dp"
+    card_view:cardCornerRadius="20dp"
     >
-    
-    <TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Prova"
-    android:layout_marginTop="20dp"
-    android:textSize="16dp"
-    android:textColor="@color/good"
-    android:layout_gravity="center_horizontal"
-    android:id="@+id/titolo_map"
-    />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Prova"
-        android:layout_marginTop="20dp"
-        android:textSize="12dp"
-        android:textColor="@color/good"
-        android:layout_gravity="center_horizontal"
-        android:id="@+id/text_map"
-        />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="NOME RISTORANTE"
+            android:layout_marginTop="5dp"
+            android:textSize="16dp"
+            android:textColor="@color/black"
+            android:layout_gravity="center_horizontal"
+            android:id="@+id/titolo_map"
+            />
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_ricerca_luogo"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"
-        />
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="2dip"
+            android:background="#20000000"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            />
 
-</LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center"
+            >
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_restaurant_menu_black_48dp"
+                android:layout_gravity="center_horizontal"
+                android:id="@+id/markerLogo"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:textSize="14dp"
+                android:textColor="@color/black"
+                android:layout_gravity="center_horizontal"
+                android:id="@+id/text_map"
+                android:gravity="center"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
+                />
+        </LinearLayout>
+
+
+    </LinearLayout>
+
+</android.support.v7.widget.CardView>
