Continua bug-fixes

--- a/app/src/main/res/drawable/side_nav_bar_restaurant.xml
+++ b/app/src/main/res/drawable/side_nav_bar_restaurant.xml
@@ -2,8 +2,8 @@
     android:shape="rectangle">
     <gradient
         android:angle="135"
-        android:centerColor="#70FC8A"
-        android:endColor="#08E230"
-        android:startColor="#A0FAB1"
+        android:centerColor="#03A9F4"
+        android:endColor="#03A9F4"
+        android:startColor="#88D2F4"
         android:type="linear" />
 </shape>
