--- a/app/src/main/res/layout/activity_checkout_order.xml
+++ b/app/src/main/res/layout/activity_checkout_order.xml
@@ -28,6 +28,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
+                android:padding="@dimen/activity_horizontal_margin"
                 >
                 <TextView
                     android:layout_width="match_parent"
@@ -87,11 +88,18 @@
                     android:layout_gravity="center"
                     android:gravity="center"
                     />
+
+                <View
+                    android:layout_width="fill_parent"
+                    android:layout_height="1dip"
+                    android:background="#20000000"
+                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
+                    ></View>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_margin="20dp">
+                    android:padding="@dimen/activity_horizontal_margin">
                     <TextView
                         android:layout_width="match_parent"
                         android:text="@string/notes"
@@ -103,6 +111,7 @@
                         android:ems="10"
                         android:id="@+id/notes" />
                 </LinearLayout>
+
             </LinearLayout>
 
 
