--- a/app/src/main/res/layout/activity_contact_us.xml
+++ b/app/src/main/res/layout/activity_contact_us.xml
@@ -111,6 +111,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/send"
+                android:padding="10dp"
+                android:textColor="@color/white"
+                android:background="@drawable/mybutton"
+
                 android:id="@+id/button" />
 
         </LinearLayout>
