--- a/app/src/main/res/layout/reservation_details_dialog.xml
+++ b/app/src/main/res/layout/reservation_details_dialog.xml
@@ -24,31 +24,42 @@
             android:layout_centerHorizontal="true" />
 
     </RelativeLayout>
-
     <LinearLayout
-        android:orientation="horizontal"
-        android:layout_margin="@dimen/activity_horizontal_margin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:orientation="vertical"
         android:id="@+id/seatsLL">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_margin="@dimen/activity_horizontal_margin"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="@string/reserved_seats"
-            android:textStyle="bold"/>
+            >
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="3"
-            android:id="@+id/seats" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="@string/reserved_seats"
+                android:textStyle="bold"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="3"
+                android:id="@+id/seats" />
+        </LinearLayout>
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1dip"
+            android:background="#20000000"
+            android:layout_marginTop="3dp"
+            android:layout_marginBottom="3dp" />
     </LinearLayout>
-
     <LinearLayout
         android:orientation="vertical"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
@@ -69,14 +80,18 @@
             android:textStyle="bold"
             android:id="@+id/textView2" />
     </LinearLayout>
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:id="@+id/totalLL">
     <LinearLayout
         android:orientation="horizontal"
         android:layout_margin="@dimen/activity_horizontal_margin"
         android:layout_width="match_parent"
         android:gravity="center"
         android:layout_height="wrap_content"
-        android:id="@+id/totalLL">
+       >
 
         <TextView
             android:layout_width="wrap_content"
@@ -95,12 +110,18 @@
 
 
     </LinearLayout>
-
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="1dip"
+        android:background="#20000000"
+        android:layout_marginTop="3dp"
+        android:layout_marginBottom="3dp" />
+    </LinearLayout>
     <LinearLayout
         android:orientation="vertical"
         android:layout_margin="@dimen/activity_horizontal_margin"
         android:layout_width="match_parent"
-        android:gravity="center"
+        android:visibility="gone"
         android:layout_height="wrap_content"
         android:id="@+id/notesLL">
 
@@ -114,7 +135,6 @@
             android:id="@+id/notes"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
             android:text="Siamo spiacenti ma il locale è già pieno , speriamo di vederti presto !"
             android:textAppearance="?android:attr/textAppearanceMedium"
             />
